--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Digital Lync LMS</title>
   <style>
     body {
-      background-color: pink !important;
+      background-color: red !important;
     }
   </style>
 </head>
